2008-01-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c (list_processes_1): Don't use SCHARS on a nil buffer name.

	* xdisp.c (Qauto_hscroll_mode): New var.
	(syms_of_xdisp): Initialize it.
	(hscroll_window_tree): Use it to lookup `auto-hscroll-mode' in each
	window's buffer.
	(hscroll_windows): Don't check automatic_hscrolling_p here.

	* window.c (set_window_buffer): Don't unnecessarily reset hscroll and
	vscroll if we're setting window-buffer to the value it already has.

2008-01-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/intel386.h: Remove references to XENIX.

2008-01-17  Andreas Schwab  <schwab@suse.de>

	* m/amdx86-64.h (START_FILES, LIB_STANDARD): Use HAVE_LIB64_DIR
	instead of HAVE_X86_64_LIB64_DIR.
	* m/ibms390x.h (START_FILES, LIB_STANDARD): Likewise.

2008-01-17  Glenn Morris  <rgm@gnu.org>

	* m/ibms390x.h (START_FILES, LIB_STANDARD): Adjust value according
	to HAVE_X86_64_LIB64_DIR.

2008-01-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/irix3-3.h:
	* s/irix4-0.h:
	* s/386-ix.h:
	* s/domain.h:
	* s/hpux9-x11r4.h:
	* s/hpux9shxr4.h: Remove files for systems no longer supported.

	* sysdep.c: Remove code containing references to symbols defined
	by unsupported systems.

2008-01-16  Glenn Morris  <rgm@gnu.org>

	* coding.c (select-safe-coding-system-function): Doc fix.

2008-01-15  Glenn Morris  <rgm@gnu.org>

	* config.in: Revert 2008-01-13 change: this is a generated file.

2008-01-13  Tom Tromey  <tromey@redhat.com>

	* lisp.h: Fix typo.

2008-01-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/sequent-ptx.h:
	* m/sequent.h:
	* s/ptx.h:
	* s/ptx4-2.h:
	* s/ptx4.h: Remove files for systems no longer supported.

	* callproc.c (Fcall_process): Fix previous change.

2008-01-13  Dan Nicolaescu  <dann@ics.uci.edu>

	* unexsunos4.c: Remove file, system not supported anymore.

	* src/m/mips.h:
	* src/m/intel386.h:
	* callproc.c:
	* config.in:
	* ecrt0.c:
	* emacs.c:
	* fileio.c:
	* frame.c:
	* getpagesize.h:
	* keyboard.c:
	* lread.c:
	* process.c: